--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="f3.nsu.com.habit.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <LinearLayout
+        android:id="@+id/bottom_bar_group"
+        android:layout_width="match_parent"
+        android:layout_height="48.3dp"
+        android:orientation="horizontal"
+        android:layout_alignParentBottom="true"
+        android:gravity="center_vertical">
+        <RelativeLayout style="@style/BottomBar">
+            <ImageButton
+                style="@style/BottomBarImgBtn"
+                android:id="@+id/button_home"
+                android:background="@drawable/button_home_state" />
+        </RelativeLayout>
+        <RelativeLayout style="@style/BottomBar">
+            <ImageButton
+                style="@style/BottomBarImgBtn"
+                android:id="@+id/button_pet"
+                android:background="@drawable/button_pet_state"/>
+        </RelativeLayout>
+        <RelativeLayout style="@style/BottomBar">
+            <ImageButton
+                style="@style/BottomBarImgBtn"
+                android:id="@+id/button_personal"
+                android:background="@drawable/button_personal_state"/>
+        </RelativeLayout>
 
-</android.support.constraint.ConstraintLayout>
+    </LinearLayout>
+    <View
+        android:id="@+id/line"
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:layout_above="@id/bottom_bar_group"/>
+    <FrameLayout
+        android:id="@+id/fragment_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@id/line">
+        <fragment
+            android:id="@+id/fragment_home"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:name="f3.nsu.com.habit.HomeFragment">
+
+        </fragment>
+        <fragment
+            android:id="@+id/fragment_pet"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:name="f3.nsu.com.habit.PetFragment">
+
+        </fragment>
+        <fragment
+            android:id="@+id/fragment_personal"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:name="f3.nsu.com.habit.PersonalFragment">
+
+        </fragment>
+
+    </FrameLayout>
+
+</RelativeLayout>
