--- a/app/src/main/res/drawable/button_home_state.xml
+++ b/app/src/main/res/drawable/button_home_state.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--导航栏home按钮切换-->
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true" android:drawable="@drawable/tab_icon_list_default" />
     <item android:state_enabled="false" android:drawable="@drawable/tab_icon_list_selected"/>
