--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="f3.nsu.com.habit.acitvity.MainActivity">
-
+    <!--状态栏-->
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@mipmap/clander_bg_top"
+        android:layout_alignParentTop="true"/>
+    <!--底部导航栏-->
     <LinearLayout
         android:id="@+id/bottom_bar_group"
         android:layout_width="match_parent"
@@ -33,11 +39,13 @@
         </RelativeLayout>
 
     </LinearLayout>
+    <!--导航栏分割线-->
     <View
         android:id="@+id/line"
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
         android:layout_above="@id/bottom_bar_group"/>
+    <!--3个fragment-->
     <FrameLayout
         android:id="@+id/fragment_content"
         android:layout_width="match_parent"
