主界面基本完成

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -42,11 +42,102 @@
         android:layout_height="139dp"
         android:background="@mipmap/clander_bg"
         android:layout_below="@id/tab_relative">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="123456789"
-            android:layout_centerInParent="true"/>
+        <RelativeLayout
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:background="@drawable/round_button_color4"
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="19dp">
+            <TextView
+                android:id="@+id/day_textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="18dp"
+                android:text="5日"
+                android:textSize="21sp"
+                android:textColor="#ffffff"/>
+            <TextView
+                android:id="@+id/month_textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="44dp"
+                android:text="7月"
+                android:textSize="12sp"
+                android:textColor="#ffffff"/>
+
+        </RelativeLayout>
+        <LinearLayout
+            android:layout_width="212dp"
+            android:layout_height="111dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginLeft="134dp"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="日"
+                android:textSize="12sp"
+                android:textColor="#ffffff"/>
+            <TextView
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="一"
+                android:textSize="12sp"
+                android:textColor="#ffffff"/>
+            <TextView
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="二"
+                android:textSize="12sp"
+                android:textColor="#ffffff"/>
+            <TextView
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="三"
+                android:textSize="12sp"
+                android:textColor="#ffffff"/>
+            <TextView
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="四"
+                android:textSize="12sp"
+                android:textColor="#ffffff"/>
+            <TextView
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="五"
+                android:textSize="12sp"
+                android:textColor="#ffffff"/>
+            <TextView
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="六"
+                android:textSize="12sp"
+                android:textColor="#ffffff"/>
+
+        </LinearLayout>
+        <f3.nsu.com.habit.ui.MonthDateView
+            android:id="@+id/monthDateView"
+            android:layout_width="212dp"
+            android:layout_height="101dp"
+            android:layout_marginTop="26dp"
+            android:layout_marginLeft="134dp"/>
 
     </f3.nsu.com.habit.ui.ExpandLayout>
     <!--listView-->
