--- a/app/src/main/res/drawable/round_button_color1.xml
+++ b/app/src/main/res/drawable/round_button_color1.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <solid android:color="#bd0fe1"/>
+    <solid android:color="#0396FF"/>
     <corners android:radius="360dip"/>
 </shape>
