--- a/app/src/main/res/layout/add_habit_activity.xml
+++ b/app/src/main/res/layout/add_habit_activity.xml
@@ -3,6 +3,12 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <!--状态栏-->
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@mipmap/clander_bg_top"
+        android:layout_alignParentTop="true"/>
 
     <FrameLayout
         android:id="@+id/fragment_add"
