--- a/app/src/main/res/layout/fragment_new_habit.xml
+++ b/app/src/main/res/layout/fragment_new_habit.xml
@@ -32,6 +32,7 @@
             android:textSize="18sp" />
 
         <ImageButton
+            android:id="@+id/complete_img_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
