--- a/app/src/main/res/layout/my_add_habit_activity.xml
+++ b/app/src/main/res/layout/my_add_habit_activity.xml
@@ -3,10 +3,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <!--状态栏-->
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="22dp"
+        android:background="@mipmap/clander_bg_top"
+        android:layout_alignParentTop="true"/>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="#ffffff">
+        android:background="#ffffff"
+        android:layout_marginTop="22dp">
 
         <ImageButton
             android:id="@+id/habit_back_adapter"
@@ -32,7 +39,7 @@
         android:id="@+id/recycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="72dp"
         android:clipChildren="false"
         android:clipToPadding="false"
         android:padding="8dp" />
