--- a/app/src/main/res/layout/fragment_add_reward.xml
+++ b/app/src/main/res/layout/fragment_add_reward.xml
@@ -31,6 +31,7 @@
             android:textSize="18sp"
             android:textColor="#262626"/>
         <ImageButton
+            android:id="@+id/image_btn_save_integral"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@mipmap/invalid_name"
