--- a/app/src/main/res/layout/fragment_integral.xml
+++ b/app/src/main/res/layout/fragment_integral.xml
@@ -29,9 +29,9 @@
             android:layout_alignParentRight="true"
             android:layout_marginRight="17dp"/>
         <TextView
+            android:id="@+id/my_integral_textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="666"
             android:textSize="48sp"
             android:textColor="#ffffff"
             android:layout_centerHorizontal="true"
